--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -21,10 +21,12 @@
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
+
         <thead>
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
@@ -32,12 +34,13 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><a href="<%= urls[id] %>"><%= urls[id] %></a></td>
+              <td><a href="/urls/<%= id %>/">Edit</a></td>
               <td>
-              <form method="POST" action="/urls/<%= id %>/delete">
-                <button type="submit">Delete</button>
-              </form>
-            </td>
+                <form method="POST" action="/urls/<%= id %>/delete">
+                  <button type="submit">Delete</button>
+                </form>
+              </td>
             </tr>
           <% } %>
         </tbody>
