--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -20,6 +20,13 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= longURL %>"><%= id %></a>
         </p>
+        <form method="POST" action="/urls/<%= id %>">
+          <label for="longURL">Long URL:</label>
+          <input type="text" name="longURL" value="<%= longURL %>">
+          <button type="submit">Update</button>
+        </form>
+        
+
       </div>
       <div class="card-footer text-muted"></div>
     </div>
