--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,6 +17,13 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+
+
+      <form method="POST" action="/login">
+        <input type="text" name="username" placeholder="Username">
+        <button type="submit">Log In</button>
+      </form>
+
     </div>
   </nav>
 </header>
