Added Displaying Username with cookie-parser

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,14 +15,20 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
+        
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+    
+      <ul>
+       
+        <% if (username) { %>
+          <li>Welcome, <%= username %>!</li>
+          <li><form method="POST" action="/logout"><button type="submit">Logout</button></form></li>
+        <% } else { %>
+          <li><form method="POST" action="/login"><input type="text" name="username" placeholder="username"><button type="submit">Login</button></form></li>
+        <% } %>
+      </ul> 
 
-
-      <form method="POST" action="/login">
-        <input type="text" name="username" placeholder="Username">
-        <button type="submit">Log In</button>
-      </form>
 
     </div>
   </nav>
