Added Registering New Users cookies

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -21,8 +21,8 @@
     
       <ul>
        
-        <% if (username) { %>
-          Logged in as: <%= username %>!
+        <% if (user) { %>
+          Logged in as: <%= user.email %>!
           <form method="POST" action="/logout"><button type="submit">Logout</button></form>
         <% } else { %>
           <form method="POST" action="/login"><input type="text" name="username" placeholder="username"><button type="submit">Login</button></form>
