Added Registration Errors

--- a/views/user_registration.ejs
+++ b/views/user_registration.ejs
@@ -8,8 +8,10 @@
 </head>
 <body>
   <form action="/register" method="post">
-    <input type="email" name="email" placeholder="Email">
-    <input type="password" name="password" placeholder="Password">
+    <label for="email">Email</label>
+    <input type="email" name="email">
+    <label for="password">Password</label>
+    <input type="password" name="password">
     <button type=" submit">Sign In</button>
   </form>
     
