--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,18 +18,18 @@
         
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-    
       <ul>
-       
         <% if (user) { %>
           Logged in as: <%= user.email %>!
           <form method="POST" action="/logout"><button type="submit">Logout</button></form>
         <% } else { %>
-          <form method="POST" action="/login"><input type="text" name="username" placeholder="username"><button type="submit">Login</button></form>
+          
+          <li><a href="/register">Register</a></li>
+          <li><a href="/login">Login</a></li>
+        
         <% } %>
+        
       </ul> 
-
-
     </div>
   </nav>
 </header>
