--- a/views/user_registration.ejs
+++ b/views/user_registration.ejs
@@ -14,12 +14,21 @@
 </head>
 <body>
   <%- include('partials/_header') %>
+  <br>
+ <h1>Create Account</h1>
   <form action="/register" method="post">
+    <br>
     <label for="email">Email</label>
-    <input type="email" name="email">
+    <br>
+    <input type="email" name="email" placeholder="Enter Email">
+    <br>
+    <br>
     <label for="password">Password</label>
-    <input type="password" name="password">
-    <button type=" submit">Sign In</button>
+    <br>
+    <input type="password" name="password" placeholder="Enter Password">
+    <br>
+    <br>
+    <button type=" submit">Register</button>
   </form>
     
 </body>
