--- a/views/user_registration.ejs
+++ b/views/user_registration.ejs
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link
-  rel="stylesheet"
-  href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-  integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-  crossorigin="anonymous"
-/>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
 </head>
+
 <body>
   <%- include('partials/_header') %>
-  <br>
- <h1>Create Account</h1>
-  <form action="/register" method="post">
     <br>
-    <label for="email">Email</label>
-    <br>
-    <input type="email" name="email" placeholder="Enter Email">
-    <br>
-    <br>
-    <label for="password">Password</label>
-    <br>
-    <input type="password" name="password" placeholder="Enter Password">
-    <br>
-    <br>
-    <button type=" submit">Register</button>
-  </form>
-    
+    <h1>Create Account</h1>
+    <form action="/register" method="post">
+      <br>
+      <label for="email">Email</label>
+      <br>
+      <input type="email" name="email" placeholder="Enter Email">
+      <br>
+      <br>
+      <label for="password">Password</label>
+      <br>
+      <input type="password" name="password" placeholder="Enter Password">
+      <br>
+      <br>
+      <button type=" submit">Register</button>
+    </form>
 </body>
 </html>
-
-
